--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "admin/base.html" %}
 {% block page_heading %}GTD (Getting Things Done){% endblock %}
 {% block extrahead %}
 <!-- CSS and JavaScript for django-todo -->
